# mylab

./: .gitignore  README.md  pyproject.toml
blogs/cratedb-storage/: abs.md  queries.py
blogs/hybridsearch/: hybrid.md
code/: chunking.py  cloud_get.py  load_parquet.py  load_parquet1.py  stats.py
code/load_parquet_blog/: load_parquet1.py  load_parquet2.py  load_parquet3.py  load_parquet4.py  load_parquet5.py  load_parquet6.py  load_parquet7.py  load_parquet_ignore.py
crate_uuid/: elasticflakes.json  elasticflaketest.py  k_ordered_flake.json  normalb64.py  sort.py  uuid.py
crate_uuid/benchmark/: main.py
mongodb/: load_data.py  read_data.py  rename.py
prometheus/: main.py
