[tool.poetry]
name = "mytlab"
version = "0.1.0"
description = ""
authors = ["surister <surister98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.16.0"
pandas = "^2.2.3"
sqlalchemy-cratedb = "^0.40.1"
pyarrow = "^18.1.0"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
